--- a/generador.ipynb
+++ b/generador.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Generador:\n",
     "    def __init__(self, generador_id, fecha_hora=-1,\n",
-    "                 velocidad_viento=-1, direccion_viento=-1, temperatura=-1, humedad=-1):\n",
+    "                 velocidad_viento=-1, direccion_viento=-1, temperatura=-1,\n",
+    "                 humedad=-1, potencia_generada = None):\n",
     "        self.fecha_hora = fecha_hora\n",
     "        self.velocidad_viento = velocidad_viento\n",
     "        self.direccion_viento = direccion_viento\n",
     "        self.temperatura = temperatura\n",
     "        self.humedad = humedad\n",
     "        self.generador_id = generador_id\n",
+    "        self.potencia_generada = potencia_generada\n",
     "\n",
     "    def set_fecha_hora(self, fecha_hora):\n",
     "        self.fecha_hora = fecha_hora\n",
@@ -47,7 +49,7 @@
     "        self._humedad = humedad\n",
     "\n",
     "    def get_potencia_generada(self):\n",
-    "        return self._potencia_generada\n",
+    "        return self.potencia_generada\n",
     "\n",
     "    def set_potencia_generada(self, potencia_generada):\n",
     "        self.potencia_generada = potencia_generada\n",
@@ -61,9 +63,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrandom\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m datetime\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -73,24 +87,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'fecha_hora': Timestamp('2023-03-08 12:00:00'), 'velocidad_viento': 10.19041905373145, 'direccion_viento': 208, 'temperatura': 16.4341779799143, 'humedad': 56, 'potencia_generada': 813, 'generador_id': 1}\n",
-      "{'fecha_hora': Timestamp('2023-03-08 12:00:00'), 'velocidad_viento': 13.319442290789823, 'direccion_viento': 296, 'temperatura': 15.353400536961486, 'humedad': 60, 'potencia_generada': 399, 'generador_id': 2}\n",
-      "{'fecha_hora': Timestamp('2023-03-08 12:00:00'), 'velocidad_viento': 9.256785736322835, 'direccion_viento': 132, 'temperatura': 17.27263349666583, 'humedad': 70, 'potencia_generada': 349, 'generador_id': 3}\n",
-      "{'fecha_hora': Timestamp('2023-03-08 12:00:00'), 'velocidad_viento': 11.460720728286491, 'direccion_viento': 28, 'temperatura': 16.002089680626593, 'humedad': 50, 'potencia_generada': 420, 'generador_id': 4}\n",
-      "{'fecha_hora': Timestamp('2023-03-08 12:00:00'), 'velocidad_viento': 9.111594250067311, 'direccion_viento': 350, 'temperatura': 14.256456694873263, 'humedad': 42, 'potencia_generada': 295, 'generador_id': 5}\n",
-      "{'fecha_hora': Timestamp('2023-03-08 12:00:00'), 'velocidad_viento': 11.157128009518084, 'direccion_viento': 122, 'temperatura': 10.499118000892395, 'humedad': 55, 'potencia_generada': 906, 'generador_id': 6}\n",
-      "{'fecha_hora': Timestamp('2023-03-08 12:00:00'), 'velocidad_viento': 7.694281212161481, 'direccion_viento': 247, 'temperatura': 17.328365471355482, 'humedad': 78, 'potencia_generada': 814, 'generador_id': 7}\n",
-      "{'fecha_hora': Timestamp('2023-03-08 12:00:00'), 'velocidad_viento': 10.629024415026011, 'direccion_viento': 194, 'temperatura': 14.424836641617482, 'humedad': 45, 'potencia_generada': 786, 'generador_id': 8}\n",
-      "{'fecha_hora': Timestamp('2023-03-08 12:00:00'), 'velocidad_viento': 6.0253804427445345, 'direccion_viento': 299, 'temperatura': 14.529128352724893, 'humedad': 76, 'potencia_generada': 16, 'generador_id': 9}\n",
-      "{'fecha_hora': Timestamp('2023-03-08 12:00:00'), 'velocidad_viento': 13.192878194316327, 'direccion_viento': 284, 'temperatura': 15.043661419905606, 'humedad': 43, 'potencia_generada': 423, 'generador_id': 10}\n",
-      "[<__main__.Generador object at 0x0000024F23D3A290>, <__main__.Generador object at 0x0000024F244A1850>, <__main__.Generador object at 0x0000024F23D49D50>, <__main__.Generador object at 0x0000024F24830CD0>, <__main__.Generador object at 0x0000024F24830750>, <__main__.Generador object at 0x0000024F24830110>, <__main__.Generador object at 0x0000024F24830290>, <__main__.Generador object at 0x0000024F24830B90>, <__main__.Generador object at 0x0000024F24831110>, <__main__.Generador object at 0x0000024F248303D0>]\n"
+     "ename": "NameError",
+     "evalue": "name 'datetime' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 15\u001b[0m\n\u001b[0;32m     12\u001b[0m generador \u001b[38;5;241m=\u001b[39m Generador(generador_id) \n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# timestamp\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m timestamp \u001b[38;5;241m=\u001b[39m \u001b[43mdatetime\u001b[49m\u001b[38;5;241m.\u001b[39mutcnow()\u001b[38;5;241m.\u001b[39misoformat()\n\u001b[0;32m     16\u001b[0m generador\u001b[38;5;241m.\u001b[39mset_fecha_hora(timestamp)\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m# velocidad viento\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'datetime' is not defined"
      ]
     }
    ],
@@ -99,54 +107,65 @@
     "# creo la \n",
     "mediciones = []\n",
     "\n",
-    "tamaño_poblacion = 10\n",
-    "#while True:\n",
+    "n_generadores = 10\n",
     "\n",
-    "for i in range(tamaño_poblacion):\n",
-    "\n",
+    "for i in range(n_generadores):\n",
+    "    p_error = np.random.randint(1,100) \n",
     "\n",
     "    generador_id = i+1\n",
-    "\n",
+    "    # Creo un objeto tipo generador \n",
     "    generador = Generador(generador_id) \n",
-    "\n",
+    "    \n",
+    "    # timestamp\n",
     "    timestamp = datetime.utcnow().isoformat()\n",
-    "        \n",
     "    generador.set_fecha_hora(timestamp)\n",
-    "\n",
+    "    \n",
+    "    # velocidad viento\n",
     "    vv = np.random.normal(10, 2)\n",
     "    generador.set_velocidad_viento(vv)\n",
     "\n",
-    "\n",
-    "\n",
+    "    # Dirección de viento\n",
     "    direccion_viento = np.random.randint(0, 360)\n",
     "    generador.set_direccion_viento(direccion_viento)\n",
     "\n",
-    "\n",
+    "    # temperatura\n",
     "    temperatura = np.random.normal(15, 2)\n",
+    "\n",
+    "    # probabilidad de error\n",
+    "    if(p_error < 5):\n",
+    "        temperatura = -23342\n",
+    "\n",
     "    generador.set_temperatura(temperatura)\n",
     "    \n",
-    "    \n",
+    "    # humedad\n",
     "    humedad = np.random.randint(40, 80)\n",
     "    generador.set_humedad(humedad)\n",
     "    \n",
+    "    # potencia generada\n",
     "    potencia_generada = np.random.randint(0, 1000)\n",
     "    generador.set_potencia_generada(potencia_generada)\n",
     "\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "    mediciones.append(generador) \n",
-    "    \n",
     "    medicion = {\n",
+    "    \"generador_id\": generador_id,\n",
+    "\n",
     "    \"fecha_hora\": timestamp,\n",
+    "    \n",
     "    \"velocidad_viento\": vv,\n",
+    "    \n",
     "    \"direccion_viento\": direccion_viento,\n",
+    "    \n",
     "    \"temperatura\": temperatura,\n",
+    "    \n",
     "    \"humedad\": humedad,\n",
+    "    \n",
     "    \"potencia_generada\": potencia_generada,\n",
-    "    \"generador_id\": generador_id\n",
     "    }\n",
+    "\n",
+    "    # añado la medición creada \n",
+    "    mediciones.append(medicion) \n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "    r_carpeta = \"./archivo/\"\n",
     "    r_gen_id = (f\"{generador_id}.json\")\n",
@@ -165,60 +184,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting fastapiNote: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "[notice] A new release of pip is available: 23.0.1 -> 24.0\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  Downloading fastapi-0.110.0-py3-none-any.whl (92 kB)\n",
-      "     ---------------------------------------- 0.0/92.1 kB ? eta -:--:--\n",
-      "     ---- ----------------------------------- 10.2/92.1 kB ? eta -:--:--\n",
-      "     ------------------------- ------------ 61.4/92.1 kB 656.4 kB/s eta 0:00:01\n",
-      "     ------------------------- ------------ 61.4/92.1 kB 656.4 kB/s eta 0:00:01\n",
-      "     -------------------------------------- 92.1/92.1 kB 524.5 kB/s eta 0:00:00\n",
-      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0,>=1.7.4 in c:\\users\\hezitzaile\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from fastapi) (2.4.2)\n",
-      "Collecting starlette<0.37.0,>=0.36.3\n",
-      "  Downloading starlette-0.36.3-py3-none-any.whl (71 kB)\n",
-      "     ---------------------------------------- 0.0/71.5 kB ? eta -:--:--\n",
-      "     ---------------- --------------------- 30.7/71.5 kB 660.6 kB/s eta 0:00:01\n",
-      "     -------------------------------- ----- 61.4/71.5 kB 825.8 kB/s eta 0:00:01\n",
-      "     -------------------------------------- 71.5/71.5 kB 561.8 kB/s eta 0:00:00\n",
-      "Requirement already satisfied: typing-extensions>=4.8.0 in c:\\users\\hezitzaile\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from fastapi) (4.8.0)\n",
-      "Requirement already satisfied: annotated-types>=0.4.0 in c:\\users\\hezitzaile\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pydantic!=1.8,!=1.8.1,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0,>=1.7.4->fastapi) (0.6.0)\n",
-      "Requirement already satisfied: pydantic-core==2.10.1 in c:\\users\\hezitzaile\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pydantic!=1.8,!=1.8.1,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0,>=1.7.4->fastapi) (2.10.1)\n",
-      "Collecting anyio<5,>=3.4.0\n",
-      "  Downloading anyio-4.3.0-py3-none-any.whl (85 kB)\n",
-      "     ---------------------------------------- 0.0/85.6 kB ? eta -:--:--\n",
-      "     ---- ----------------------------------- 10.2/85.6 kB ? eta -:--:--\n",
-      "     ------------------ ------------------- 41.0/85.6 kB 667.8 kB/s eta 0:00:01\n",
-      "     ------------------ ------------------- 41.0/85.6 kB 667.8 kB/s eta 0:00:01\n",
-      "     ------------------ ------------------- 41.0/85.6 kB 667.8 kB/s eta 0:00:01\n",
-      "     ------------------------------------ - 81.9/85.6 kB 383.3 kB/s eta 0:00:01\n",
-      "     -------------------------------------- 85.6/85.6 kB 371.2 kB/s eta 0:00:00\n",
-      "Requirement already satisfied: idna>=2.8 in c:\\users\\hezitzaile\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from anyio<5,>=3.4.0->starlette<0.37.0,>=0.36.3->fastapi) (3.4)\n",
-      "Collecting sniffio>=1.1\n",
-      "  Downloading sniffio-1.3.1-py3-none-any.whl (10 kB)\n",
-      "Installing collected packages: sniffio, anyio, starlette, fastapi\n",
-      "Successfully installed anyio-4.3.0 fastapi-0.110.0 sniffio-1.3.1 starlette-0.36.3\n"
+      "\"install\" no se reconoce como un comando interno o externo,\n",
+      "programa o archivo por lotes ejecutable.\n"
      ]
     }
    ],
@@ -228,19 +202,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in mediciones:\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'fastapi'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mfastapi\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m FastAPI, Body\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpydantic\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BaseModel\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'fastapi'"
+     ]
+    }
+   ],
    "source": [
     "from fastapi import FastAPI, Body\n",
     "from pydantic import BaseModel"
@@ -248,19 +224,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'datetime' is not defined",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'fastapi'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[37], line 6\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpydantic\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BaseModel\n\u001b[0;32m      4\u001b[0m app \u001b[38;5;241m=\u001b[39m FastAPI()\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28;43;01mclass\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;21;43;01mMedicion\u001b[39;49;00m\u001b[43m(\u001b[49m\u001b[43mBaseModel\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mfecha_hora\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mdatetime\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mvelocidad_viento\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mfloat\u001b[39;49m\n",
-      "Cell \u001b[1;32mIn[37], line 7\u001b[0m, in \u001b[0;36mMedicion\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mMedicion\u001b[39;00m(BaseModel):\n\u001b[1;32m----> 7\u001b[0m     fecha_hora: \u001b[43mdatetime\u001b[49m\n\u001b[0;32m      8\u001b[0m     velocidad_viento: \u001b[38;5;28mfloat\u001b[39m\n\u001b[0;32m      9\u001b[0m     direccion_viento: \u001b[38;5;28mint\u001b[39m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'datetime' is not defined"
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mfastapi\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m FastAPI, Body\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpydantic\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BaseModel\n\u001b[0;32m      4\u001b[0m app \u001b[38;5;241m=\u001b[39m FastAPI()\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'fastapi'"
      ]
     }
    ],
@@ -289,6 +264,7 @@
     "        # ...\n",
     "\n",
     "        return {\"message\": \"Medición creada exitosamente\"}\n",
+    "    \n",
     "    except ValidationError as e:\n",
     "        # Handle validation errors gracefully\n",
     "        return {\"error\": str(e)}"
@@ -352,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
