--- a/generador.ipynb
+++ b/generador.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,61 +63,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrandom\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m datetime\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import random\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'datetime' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 15\u001b[0m\n\u001b[0;32m     12\u001b[0m generador \u001b[38;5;241m=\u001b[39m Generador(generador_id) \n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# timestamp\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m timestamp \u001b[38;5;241m=\u001b[39m \u001b[43mdatetime\u001b[49m\u001b[38;5;241m.\u001b[39mutcnow()\u001b[38;5;241m.\u001b[39misoformat()\n\u001b[0;32m     16\u001b[0m generador\u001b[38;5;241m.\u001b[39mset_fecha_hora(timestamp)\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m# velocidad viento\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'datetime' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import random\n",
-    "# creo la \n",
-    "mediciones = []\n",
+    "def data(generador):\n",
     "\n",
-    "n_generadores = 10\n",
-    "\n",
-    "for i in range(n_generadores):\n",
+    "    id = generador.generador_id \n",
+    "    \n",
     "    p_error = np.random.randint(1,100) \n",
     "\n",
-    "    generador_id = i+1\n",
-    "    # Creo un objeto tipo generador \n",
-    "    generador = Generador(generador_id) \n",
-    "    \n",
     "    # timestamp\n",
     "    timestamp = datetime.utcnow().isoformat()\n",
+    "    \n",
     "    generador.set_fecha_hora(timestamp)\n",
     "    \n",
     "    # velocidad viento\n",
@@ -146,37 +117,67 @@
     "    generador.set_potencia_generada(potencia_generada)\n",
     "\n",
     "    medicion = {\n",
-    "    \"generador_id\": generador_id,\n",
+    "        \"generador_id\": id,\n",
     "\n",
-    "    \"fecha_hora\": timestamp,\n",
-    "    \n",
-    "    \"velocidad_viento\": vv,\n",
-    "    \n",
-    "    \"direccion_viento\": direccion_viento,\n",
-    "    \n",
-    "    \"temperatura\": temperatura,\n",
-    "    \n",
-    "    \"humedad\": humedad,\n",
-    "    \n",
-    "    \"potencia_generada\": potencia_generada,\n",
+    "        \"fecha_hora\": timestamp,\n",
+    "        \n",
+    "        \"velocidad_viento\": vv,\n",
+    "        \n",
+    "        \"direccion_viento\": direccion_viento,\n",
+    "        \n",
+    "        \"temperatura\": temperatura,\n",
+    "        \n",
+    "        \"humedad\": humedad,\n",
+    "        \n",
+    "        \"potencia_generada\": potencia_generada,\n",
     "    }\n",
+    "    \n",
+    "    return medicion\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "data() takes 0 positional arguments but 1 was given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[45], line 15\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# Creo un objeto tipo generador \u001b[39;00m\n\u001b[0;32m     12\u001b[0m generador \u001b[38;5;241m=\u001b[39m Generador(generador_id) \n\u001b[1;32m---> 15\u001b[0m medicion \u001b[38;5;241m=\u001b[39m \u001b[43mdata\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgenerador\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# añado la medición creada \u001b[39;00m\n\u001b[0;32m     18\u001b[0m mediciones\u001b[38;5;241m.\u001b[39mappend(medicion) \n",
+      "\u001b[1;31mTypeError\u001b[0m: data() takes 0 positional arguments but 1 was given"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "# creo la \n",
+    "mediciones = {}\n",
+    "output_file_path = './archivo/data.json'\n",
+    "n_generadores = 10\n",
     "\n",
-    "    # añado la medición creada \n",
-    "    mediciones.append(medicion) \n",
+    "with open(output_file_path, 'a') as output_file:\n",
     "\n",
+    "    for i in range(n_generadores):\n",
+    "        generador_id = i+1\n",
+    "        # Creo un objeto tipo generador \n",
+    "        generador = Generador(generador_id) \n",
+    "        \n",
+    "        \n",
+    "        medicion = data(generador)\n",
+    "        \n",
+    "        # añado la medición creada \n",
+    "        mediciones.append(medicion) \n",
     "\n",
+    "        m = medicion\n",
+    "        # guardar los registros en un archivo JSON \n",
+    "        json.dump(m, output_file)\n",
+    "        output_file_path.write('\\n')\n",
     "\n",
-    "\n",
-    "    r_carpeta = \"./archivo/\"\n",
-    "    r_gen_id = (f\"{generador_id}.json\")\n",
-    "    ruta = r_carpeta + r_gen_id\n",
-    "\n",
-    "    (f\"{generador_id}.json\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "    print(medicion)\n",
-    "\n",
+    "        print(medicion)\n",
     "\n",
     "            \n",
     "print(mediciones)\n"
@@ -184,15 +185,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\"install\" no se reconoce como un comando interno o externo,\n",
-      "programa o archivo por lotes ejecutable.\n"
+      "'install' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
      ]
     }
    ],
@@ -202,21 +203,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'fastapi'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mfastapi\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m FastAPI, Body\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpydantic\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BaseModel\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'fastapi'"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "for i in mediciones:\n",
+    "\n",
+    "    print(i)\n",
+    "    print(\"---\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from fastapi import FastAPI, Body\n",
     "from pydantic import BaseModel"
@@ -224,21 +225,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'fastapi'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mfastapi\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m FastAPI, Body\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpydantic\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BaseModel\n\u001b[0;32m      4\u001b[0m app \u001b[38;5;241m=\u001b[39m FastAPI()\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'fastapi'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from fastapi import FastAPI, Body\n",
     "from pydantic import BaseModel\n",
@@ -246,13 +235,13 @@
     "app = FastAPI()\n",
     "\n",
     "class Medicion(BaseModel):\n",
+    "    generador_id: int\n",
     "    fecha_hora: datetime\n",
     "    velocidad_viento: float\n",
     "    direccion_viento: int\n",
     "    temperatura: float\n",
     "    humedad: int\n",
     "    potencia_generada: int\n",
-    "    generador_id: int\n",
     "\n",
     "@app.post(\"/mediciones\")\n",
     "async def crear_medicion(medicion: Medicion = Body(...)):\n",
@@ -272,27 +261,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './logs/dummy_logs.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[32], line 65\u001b[0m\n\u001b[0;32m     62\u001b[0m output_file_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./logs/dummy_logs.json\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     64\u001b[0m \u001b[38;5;66;03m# Crear y guardar los registros en un archivo JSON, cada uno en una línea nueva\u001b[39;00m\n\u001b[1;32m---> 65\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43moutput_file_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mw\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m output_file:\n\u001b[0;32m     66\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_logs):\n\u001b[0;32m     67\u001b[0m         log_entry \u001b[38;5;241m=\u001b[39m data()\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:286\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    279\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    280\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    281\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    282\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    283\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    284\u001b[0m     )\n\u001b[1;32m--> 286\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './logs/dummy_logs.json'"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "from datetime import datetime\n",
     "import random\n",
     "\n",
     "# Función para generar registros dummy\n",
-    "def generate_dummy_log():\n",
+    "#def data():\n",
+    "\n",
+    "    p_error = np.random.randint(1,100) \n",
+    "\n",
+    "    # timestamp\n",
     "    timestamp = datetime.utcnow().isoformat()\n",
-    "    log_level = random.choice(['INFO', 'ERROR', 'DEBUG'])\n",
-    "    message = f\"Sample log message - {random.randint(1, 100)}\"\n",
     "    \n",
-    "    log_entry = {\n",
-    "        \"@timestamp\": timestamp,\n",
-    "        \"log.level\": log_level,\n",
-    "        \"message\": message\n",
+    "    generador.set_fecha_hora(timestamp)\n",
+    "    \n",
+    "    # velocidad viento\n",
+    "    vv = np.random.normal(10, 2)\n",
+    "    generador.set_velocidad_viento(vv)\n",
+    "\n",
+    "    # Dirección de viento\n",
+    "    direccion_viento = np.random.randint(0, 360)\n",
+    "    generador.set_direccion_viento(direccion_viento)\n",
+    "\n",
+    "    # temperatura\n",
+    "    temperatura = np.random.normal(15, 2)\n",
+    "\n",
+    "    # probabilidad de error\n",
+    "    if(p_error < 5):\n",
+    "        temperatura = -23342\n",
+    "\n",
+    "    generador.set_temperatura(temperatura)\n",
+    "    \n",
+    "    # humedad\n",
+    "    humedad = np.random.randint(40, 80)\n",
+    "    generador.set_humedad(humedad)\n",
+    "    \n",
+    "    # potencia generada\n",
+    "    potencia_generada = np.random.randint(0, 1000)\n",
+    "    generador.set_potencia_generada(potencia_generada)\n",
+    "\n",
+    "    medicion = {\n",
+    "        \"generador_id\": generador_id,\n",
+    "\n",
+    "        \"fecha_hora\": timestamp,\n",
+    "        \n",
+    "        \"velocidad_viento\": vv,\n",
+    "        \n",
+    "        \"direccion_viento\": direccion_viento,\n",
+    "        \n",
+    "        \"temperatura\": temperatura,\n",
+    "        \n",
+    "        \"humedad\": humedad,\n",
+    "        \n",
+    "        \"potencia_generada\": potencia_generada,\n",
     "    }\n",
     "    \n",
-    "    return log_entry\n",
+    "    return medicion\n",
     "\n",
     "# Número de registros dummy a generar\n",
     "num_logs = 10\n",
@@ -303,13 +344,82 @@
     "# Crear y guardar los registros en un archivo JSON, cada uno en una línea nueva\n",
     "with open(output_file_path, 'w') as output_file:\n",
     "    for _ in range(num_logs):\n",
-    "        log_entry = generate_dummy_log()\n",
+    "        log_entry = data()\n",
     "        json.dump(log_entry, output_file)\n",
     "        output_file.write('\\n')\n",
     "\n",
     "print(f\"Archivo JSON con {num_logs} registros dummy creado en {output_file_path}\\n\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from datetime import datetime\n",
+    "import random\n",
+    "\n",
+    "# Función para generar registros dummy\n",
+    "def generate_dummy_log(generador):\n",
+    "    #i = id\n",
+    "    timestamp = datetime.utcnow().isoformat()\n",
+    "    vv = np.random.normal(10, 2)\n",
+    "    generador.set_fecha_hora(timestamp)\n",
+    "    \n",
+    "    \n",
+    "    log_level = random.choice(['INFO', 'ERROR', 'DEBUG'])\n",
+    "    message = f\"Sample log message - {random.randint(1, 100)}\"\n",
+    "    direccion_viento = np.random.randint(0, 360)\n",
+    "    temperatura = np.random.normal(15, 2)\n",
+    "    humedad = np.random.randint(40, 80)\n",
+    "    potencia_generada = np.random.randint(0, 1000)\n",
+    "    \n",
+    "    log_entry = {\n",
+    "        #\"generador_id\": id,\n",
+    "\n",
+    "        \"fecha_hora\": timestamp,\n",
+    "        \n",
+    "        \"velocidad_viento\": vv,\n",
+    "        \n",
+    "        \"direccion_viento\": direccion_viento,\n",
+    "        \n",
+    "        \"temperatura\": temperatura,\n",
+    "        \n",
+    "        \"humedad\": humedad,\n",
+    "        \n",
+    "        \"potencia_generada\": potencia_generada,\n",
+    "    }\n",
+    "    \n",
+    "    return log_entry\n",
+    "\n",
+    "# Número de registros dummy a generar\n",
+    "num_generadores= 10\n",
+    "\n",
+    "# Ruta del archivo JSON de salida\n",
+    "output_file_path = './archivo/data.json'\n",
+    "\n",
+    "# Crear y guardar los registros en un archivo JSON, cada uno en una línea nueva\n",
+    "with open(output_file_path, 'w') as output_file:\n",
+    "    for _ in range(num_generadores):\n",
+    "        generador_id = i+1\n",
+    "        \n",
+    "        generador =Generador(generador_id)\n",
+    "        log_entry = generate_dummy_log(generador)\n",
+    "        json.dump(log_entry, output_file)\n",
+    "        output_file.write('\\n')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -328,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
